--- a/accesspoint.html
+++ b/accesspoint.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Please wait while we check your browser...</title>
+  <title>Please wait...</title>
   <script>
     // Redirect function delayed by 3 seconds
     function delayedRedirect() {
@@ -23,6 +23,6 @@
   </script>
 </head>
 <body>
-  <p>Please wait...</p>
+  <p>Please wait while we check your browser...</p>
 </body>
 </html>
